# ir-faq-mvp

./: .firebaserc  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  cloudbuild.agent.yaml  cloudbuild.yaml  firebase.json  main.py  next.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
agent/: .env.example  __init__.py  agent.py  analytics.py  config.py  db.py  facts_store.py  prompt.py  scope.py  server.py  store.py  suggest.py  synthesize.py  tools.py
agent/data/: facts.json  vis_facts.json
database/: financial_facts.sql  init-db.py  schema.sql  test-connection.py
docs/: ARCHITECTURE.md  DESIGN.md  HANDOFF.md  investor-experience-quality.md  phase1-gcp-setup.md
eval/: eval_harness.py  golden_set.7561.jsonl  golden_set.vis.jsonl
scripts/: extract_facts.py  extract_facts_xbrl.py  set-ir-claims.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/debug/: route.ts
src/app/api/doc/: route.ts
src/app/api/search/: route.ts
src/app/ir/: page.tsx
src/components/: AmbientBackground.tsx  BrandLogo.tsx  ChatInterface.tsx  CompanyPicker.tsx  CompanySelector.tsx  FactCard.tsx  Markdown.tsx  SearchModal.tsx
src/config/: companies.ts  env.ts
src/contexts/: CompanyContext.tsx
src/lib/: agent-auth.ts  agent-types.ts  discovery-engine.ts  enhanced-rag-service.ts  firebase-admin.ts  firebase.ts  firestore.ts  gcp-auth.ts  gcp.ts  rag-service.ts  rate-limit.ts  vertex-ai.ts
(+5 files in other folders)
