[project]
name = "ir-faq-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector>=1.18.2",
    "pg8000>=1.31.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    # IR Agent (ADK)
    "google-adk>=2.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-cloud-discoveryengine>=0.13.0",
    "google-cloud-secret-manager>=2.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
]
