[project]
name = "ir-faq-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector>=1.20.3",
    "pg8000>=1.31.5",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    # IR Agent (ADK)
    "google-adk>=2.3.0",
    "google-cloud-aiplatform>=1.158.0",
    "google-cloud-discoveryengine>=0.13.0",
    "google-cloud-secret-manager>=2.20.0",
    "fastapi>=0.137.2",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
]

# 開発依存（CI用。本番イメージは uv sync --no-dev で除外）
[dependency-groups]
dev = ["ruff>=0.14.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "node_modules", ".next"]

[tool.ruff.lint]
# E/W=pycodestyle, F=pyflakes, I=import整列, B=bugbear, UP=pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]
# 日本語の長文プロンプト/コメントが多いため行長(E501)は formatter に委ね lint では無視
ignore = ["E501"]
